feat: add game switcher component for easy navigation between games

--- a/games/number-ninja/index.html
+++ b/games/number-ninja/index.html
@@ -16,6 +16,7 @@
   <script src="../../shared/utils/math.js"></script>
   <script src="../../shared/utils/scoreboard.js"></script>
   <script src="../../shared/utils/player-switcher.js"></script>
+  <script src="../../shared/utils/game-switcher.js"></script>
 
   <!-- Game logic -->
   <script src="game.js"></script>
