Add Memory Match game with comprehensive README, game logic, and UI
- Introduced Memory Match game featuring a dual-grid design for matching math problems and answers.
- Implemented game mechanics including scoring, difficulty levels, and timer.
- Created a detailed README outlining learning objectives, gameplay flow, and instructional strategies.
- Developed game interface with responsive design and accessibility features.
- Updated main index and game switcher to include Memory Match.

--- a/index.html
+++ b/index.html
@@ -185,20 +185,20 @@
     </div>
 
     <div class="games-grid">
-      <!-- Multiplication Sprint -->
-      <a href="games/multiplication-sprint/index.html" class="game-card">
-        <div class="game-icon">🏃</div>
-        <h2 class="game-title">Multiplication Sprint</h2>
+      <!-- Memory Match -->
+      <a href="games/memory-match/index.html" class="game-card">
+        <div class="game-icon">🧠</div>
+        <h2 class="game-title">Memory Match</h2>
         <p class="game-description">
-          Answer all 20 questions in a grid format. Choose your own path through the questions!
+          Match hidden math problems with visible answers in this memory challenge!
         </p>
         <ul class="game-features">
-          <li>All questions visible at once</li>
-          <li>Answer in any order</li>
-          <li>2-minute time limit</li>
-          <li>Perfect for strategic thinkers</li>
+          <li>3×4 grid of problem cards</li>
+          <li>3×4 grid of answer cards</li>
+          <li>Match all pairs before time runs out</li>
+          <li>Perfect for memory training</li>
         </ul>
-        <div class="play-button">Start Sprint 🚀</div>
+        <div class="play-button">Start Matching 🧠</div>
       </a>
 
       <!-- Math Blitz -->
