feat: rename project references from MathPath Games to algebrain.dev across all files

--- a/games/memory-match/index.html
+++ b/games/memory-match/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Memory Match - Match hidden math problems with visible answers. Train your memory and math skills!">
-  <title>Memory Match | MathPath Games</title>
+  <title>Memory Match | algebrain.dev</title>
 
   <!-- Common Styles -->
   <link rel="stylesheet" href="../../shared/styles/common.css">
@@ -31,7 +31,7 @@
       console.log('PlayerStorage:', PlayerStorage);
       const player = PlayerStorage.getCurrentPlayer();
       console.log('Current player:', player);
-      console.log('localStorage mathpath_current_player:', localStorage.getItem('mathpath_current_player'));
+      console.log('localStorage algebrain_dev_current_player:', localStorage.getItem('algebrain_dev_current_player'));
 
       if (!player) {
         // Redirect to main menu to set player name
