--- a/privacy.html
+++ b/privacy.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="MathPath Games - Privacy Information">
-  <title>Privacy Information - MathPath Games</title>
+  <meta name="description" content="algebrain.dev - Privacy Information">
+  <title>Privacy Information - algebrain.dev</title>
 
   <link rel="stylesheet" href="shared/styles/common.css">
 
@@ -137,7 +137,7 @@
     <div class="privacy-card">
       <div class="privacy-header">
         <h1>🔒 Privacy Information</h1>
-        <p>Your privacy is important. Here's how MathPath Games handles your data.</p>
+        <p>Your privacy is important. Here's how algebrain.dev handles your data.</p>
       </div>
 
       <div class="highlight-box">
@@ -146,7 +146,7 @@
 
       <div class="privacy-section">
         <h2>What We Store</h2>
-        <p>MathPath Games stores only two things in your browser's local storage:</p>
+        <p>algebrain.dev stores only two things in your browser's local storage:</p>
         <ul>
           <li>Your nickname (so you can track your progress)</li>
           <li>Your game scores (to show your personal high scores)</li>
@@ -187,7 +187,7 @@
       <div class="privacy-section">
         <h2>Our Mission</h2>
         <p>
-          MathPath Games exists for one simple purpose: to help kids learn math through fun games.
+          algebrain.dev exists for one simple purpose: to help kids learn math through fun games.
           There's no business model, no data harvesting, no ulterior motives. Just games for learning.
         </p>
       </div>
