--- a/games/multiplication-sprint/index.html
+++ b/games/multiplication-sprint/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Multiplication Sprint - Fast-paced math game for practicing multiplication tables">
-  <title>Multiplication Sprint | MathPath Games</title>
+  <title>Multiplication Sprint | algebrain.dev</title>
 
   <!-- Common Styles -->
   <link rel="stylesheet" href="../../shared/styles/common.css">
@@ -48,7 +48,7 @@
         <div class="container container-sm" style="min-height: 100vh; display: flex; align-items: center; justify-content: center;">
           <div class="card text-center animate-slideUp">
             <h1 style="font-size: var(--font-size-4xl); margin-bottom: var(--space-4);">
-              🎮 Welcome to MathPath!
+              🎮 Welcome to algebrain.dev!
             </h1>
             <p style="font-size: var(--font-size-lg); color: var(--color-text-secondary); margin-bottom: var(--space-8);">
               Choose a nickname
